--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,17 @@
 
 </head>
 <body>
-    Hello
+    <div class="container">
+        <div class="row">
+            <h2 class="text-center">Shop</h2>
+        </div>
+        <div class="row" id="product-list">
+            <div class='col-4'>
+                pix
+            </div>
+            <div class="col-4"></div>
+        </div>
+
+    </div>    
 </body>
 </html>
