margin to cards

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
             <h2 class="text-center">Shop</h2>
         </div>
         <div class="row" id="product-list">
-            <div class='col-4'>
+            <div class='col-4 card mx-2'>
                 pix
             </div>
-            <div class="col-4"></div>
+            <div class="col-4 card mx-2">pix  </div>
         </div>
 
     </div>    
