commit for UI of shop page is completed

--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,28 @@
 <body>
     <div class="container">
         <div class="row">
+            <div class="col"></div>
             <h2 class="text-center">Shop</h2>
+            <div class="col"></div>
         </div>
         <div class="row" id="product-list">
-            <div class='col-4 card mx-2'>
-                pix
+            <div class='col-4 card mx-2 p-2'>
+                <h4 class="product-name">Product1</h4>
+                <div class="product-manufacturer">Google</div>
+                <div class="row">
+                    <div class="col m-3 p-3"><b>Rs.65,000</b></div>
+                    <button class="btn btn-primary col m-3 p-1">Buy</button>
+                </div>
+
             </div>
-            <div class="col-4 card mx-2">pix  </div>
+            <div class="col-4 card mx-2 p-2">  
+                <h4 class="product-name">Product2</h4>
+                <div class="product-manufacturer">IU</div>
+                <div class="row">
+                    <div class="col m-3 p-3"><b>Rs.47,000</b></div>
+                    <button class="btn btn-primary col m-3 p-1">Buy</button>
+                </div>
+            </div>
         </div>
 
     </div>    
