--- a/public/add_products.html
+++ b/public/add_products.html
@@ -14,6 +14,28 @@
     <script src="./add_products.html"></script>
 </head>
 <body>
+    <div class="container p-4">
+        <h3 class="text-center">Add Product</h3>
+        <div class="col"></div>
+        <div class="col-6">
+            <form>
+                <div class="form-group">
+                    <label for="productName">Product Name:</label>
+                    <input type="text" id="productName">
+                </div>
+                <div class="form-group">
+                    <label for="productManufacturer">Product Manufacturer:</label>
+                    <input type="text" id="productManufacturer">
+                </div>
+                <div class="form-group">
+                    <label for="productPrice">Product Price:</label>
+                    <input type="number" min="0" id="productPrice">
+                </div>
+            </form>
+            <button class="btn btn-success px-3" id="btnProductAdd"> ADD </button>
+        </div>
+        <div class="col-6"></div>
+    </div>
     
 </body>
 </html>
